取得を行ごとにチェックではなく正規表現に切り替えた

--- a/test/b.scss
+++ b/test/b.scss
@@ -1,6 +1,13 @@
 // --- using inline
 // md: ### this is b.scss markdown
 
+
+// md: ### test code
+
+// md:
+// hoge
+// :md
+
 // --- using with block comment
 /**
  * md:
